--- a/tic-tac-toe/package.json
+++ b/tic-tac-toe/package.json
@@ -11,11 +11,13 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.15",
+    "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
+    "sweetalert2": "^11.1.9",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
